# GetVersionEx-Test-Windows-Internals-Day-1

./: .gitignore  CMakeLists.txt  README.md  source.cpp  with_manifest.cetrace  without_manifest.cetrace
